# new-j-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.txt
src/: CMakeLists.txt  bytecode.cpp  bytecode.h  config.cpp  config.h  config.hpp  ir.cpp  ir.h  lexer.cpp  lexer.h  main.cpp  node_forward.h  nodes.cpp  nodes.h  parser.cpp  parser.h  program.cpp  token.h  visitor.cpp  visitor.h
src/ast/: lexer.cpp  node_forward.h  nodes.h  parser.cpp  parser.h  program.cpp  program.h
src/ir/: ir.cpp  ir.h  ir_type.h
tools/: line_counts.sh  tag_gen.sh
